PM-25 : add styling to counter button

--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -4,6 +4,6 @@
   margin: 2rem auto;
   padding: 2rem;
   border-radius: 8px;
-  background-color: burlywood;
+  background-color: skyblue;
   text-align: center;
 }
